<package format="2">
  <name>mobilelab_msgs</name>
  <version>0.0.1</version>
  <description>
    Messages for controllign mobilelab
  </description>
  <maintainer email="huber.emanuel@outlook.com">Emanuel Huber</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
